tests/errors/only_dot_symb.out
cli:3:13: error: Symbol consists of only dots
            ... )
            ^
1 error generated.
